# rust-ui

./: Cargo.toml  README.md  README_WINDOWS.md  docker-compose.prod.yml
.github/workflows/: issue-triage.yml  prod-vps.yml
app/: Cargo.toml  build.rs
app/src/: shell.rs
app/src/__registry__/: demos_sidenav.rs  my_command_bar_constants.rs  static_md_registry.rs
app/src/components/: github_stars.rs  shared_sidenav_demos.rs  table_of_contents.rs
app/src/domain/themes/: themes_blocks.rs
app_crates/registry/src/blocks/: login01.rs  login02.rs  login03.rs  login04.rs  sidenav01.rs  sidenav02.rs  sidenav03.rs  sidenav04.rs  sidenav05.rs  sidenav06.rs  sidenav07.rs
app_crates/registry/src/demos/: demo_card_carousel.rs  demo_carousel_snap_scroll.rs  demo_docker.rs  demo_drag_and_drop.rs  demo_input_prompt.rs  demo_input_prompt_with_tools.rs  demo_range_slider.rs  mod.rs  (+1 more)
crates/autoform/: Cargo.toml
crates/icons/: Cargo.toml
crates/leptos_ui/: Cargo.toml
crates/tw_merge/tw_merge/: Cargo.toml
crates/ui-cli/: CHANGELOG.md  Cargo.toml
e2e/tests/components/: context-menu.spec.ts  drag-and-drop.spec.ts  drawer.spec.ts
public/: documentation_map.md
public/app_components/: lazy_load_sonner.js
public/components/: drag_and_drop.js  lazy_load_sonner.js
public/docs/: changelog.md
public/docs/components/: input-prompt.md
public/registry/: index.md  tree.md
public/registry/blocks/: login01.md  sidenav01.md  sidenav02.md  sidenav03.md  sidenav04.md  sidenav05.md  sidenav06.md  sidenav07.md
server/src/middlewares/: cache_control.rs  log_requests.rs
(+198 files in other folders)
