[package]
name = "autoform"
version = "0.1.1"
edition = "2024"
authors = ["Rustify"]
description = "Derive macro for automatic form generation"
keywords = ["form", "derive", "leptos"]
categories = ["gui", "web-programming"]
license = "MIT"
readme = "README.md"
homepage = "https://rust-ui.com"
repository = "https://github.com/rust-ui/ui/tree/main/crates/autoform"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
darling = "0.20"
